added logo and tweaked layout

--- a/Home/Home.html
+++ b/Home/Home.html
@@ -1,9 +1,6 @@
 <template name="home">
 	<div class="jumbotron">
-	  <h1>Two Rooms</h1>
-	  <p>
-		  	A game for friends. 
-	  </p>
+	  <img src="images/logo.svg" alt="">
 	  <div class="pull-right"><a href="/instructions">How to play</a></div>
 	</div>
 	{{> accessCodeWidget}}
@@ -26,7 +23,8 @@
 	<div class="footer-text">
 		<div class="container">
 			<hr>
-			Two Rooms is an unofficial mobile adaptation of the card game <a href="http://tuesdayknightgames.com/tworoomsandaboom/"><em>Two Rooms and a Boom</em></a>, originally designed by Alan Gerding and Sean McCoy. <a href="https://github.com/nathanrichardng/tworooms">Check out the source code on Github <i class="fa fa-github-alt"></i></a>
+			&copy; Tuesday Knight Games 2013 <br />
+			App developed by Nathan Richard Ng
 		</div>
 	</div>
 </template>
