--- a/Main/main.html
+++ b/Main/main.html
@@ -5,7 +5,7 @@
       <nav class='navbar navbar-default'>
         <div class='container-fluid'>
           <div class='navbar-header'>
-            <a class="navbar-brand" href="/"><i class="fa fa-bomb"></i> TwoRooms</a>
+            <a class="navbar-brand" href="/"><i class="fa fa-bomb"></i> 2R1B</a>
           </div>
         </div>
       </nav>
