--- a/twoRoomsLite.html
+++ b/twoRoomsLite.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="author" content="Nathan Richard Ng">
 	<meta name="description" content="A mobile adaptation of the card game &quot;Two Rooms and a Boom!&quot;">
-	<title>TwoRooms</title>
+	<title>Two Rooms and a Boom!</title>
 	<link rel="stylesheet" href="CSS/main.css">
 	<link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
