--- a/Game/Game.html
+++ b/Game/Game.html
@@ -9,6 +9,11 @@
 		<div class="row">
 			{{> leaveGameButton}}
 		</div>
+		<div class="row">
+			{{#if isLeader}}
+				{{> resetGameButton}}
+			{{/if}}
+		</div>
 	{{/if}}
 </template>
 
@@ -24,17 +29,32 @@
 	</button>
 </template>
 
+<template name="resetGameButton">
+	<button class="button reset-game-button col-md-4 col-xs-12">
+		New Game
+	</button>
+</template>
+
 <template name="lobby">
 	{{#if playingGame}}
 		<div class="row">
 			{{> showGameAddressButton}}
 			{{> showCardsButton}}
 		</div>
+		{{#if isLeader}}
+			<div>
+				<h3>You are the leader!</h3>
+			</div>
+		{{/if}}
 		<div class="row">
 			{{> players}}
 		</div>
 		<div class="row spacer lobby">
-			{{> startGameButton}}
+			{{#if isLeader}}
+				{{> startGameButton}}
+			{{else}}
+				<div class="col-md-2"></div>
+			{{/if}}
 			{{> leaveGameButton}}
 		</div>
 	{{else}}
